[project]
name = "customer-env"
version = "1.0.0"
description = "Customer Support RL Environment"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:BuildBackend"
